added clear button to clear canvas

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <h2>Etch-a-Sketch</h2>
     <button id="numofSquares">NUMBER OF SQUARES?</button>
     <div id="container"></div>
+    <button id="clearGrid">CLEAR</button>
 
 
     <script type="text/javascript" src="index.js"></script>
